--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" >
+<nav class="bg-gray-800 text-white px-6 py-4 mb-8 shadow">
+  <div class="max-w-4xl mx-auto flex justify-between items-center">
+    <a href="index.html" class="text-xl font-bold">Scott Lyons</a>
+    <ul class="flex gap-6 text-sm">
+      <li><a href="index.html" class="hover:underline">Home</a></li>
+      <li><a href="projects/local-llm-python.html" class="hover:underline">Projects</a></li>
+      <li><a href="contact.html" class="hover:underline">Contact</a></li>
+    </ul>
+  </div>
+</nav>
+ 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
