--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <!-- Glassy Navigation -->
   <nav class="bg-gray-800/70 backdrop-blur-sm text-white py-4 shadow-md">
     <div class="max-w-5xl mx-auto flex items-center justify-between px-6">
-      <div class="text-2xl font-bold tracking-wide">Scott Lyons</div>
+      <div>
+  <img src="assets/pictures/logo.jpeg" alt="SL Logo" class="h-10 w-auto object-contain" />
+</div>
       <div class="flex gap-8 text-base">
         <a href="index.html" class="hover:text-blue-400 transition">Home</a>
         <a href="projects/local-llm-python.html" class="hover:text-blue-400 transition">Projects</a>
