--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="bg-gray-800/70 backdrop-blur-sm text-white py-4 shadow-md">
     <div class="max-w-5xl mx-auto flex items-center justify-between px-6">
       <div>
-  <img src="assets/pictures/logo.jpeg" alt="SL Logo" class="h-48 w-auto object-contain" />
+  <img src="assets/pictures/logo.png" alt="SL Logo" class="h-48 w-auto object-contain" />
 </div>
       <div class="flex gap-8 text-base">
         <a href="index.html" class="hover:text-blue-400 transition">Home</a>
