--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
 
         <!-- Project 2 -->
-        <a href="projects/IMDB ETL/imdb.etl_portfolio.html" class="block p-6 rounded-xl bg-gray-800 hover:bg-gray-700 transition shadow-lg">
+        <a href="projects/IMDB ETL/imdb_etl_portfolio.html" class="block p-6 rounded-xl bg-gray-800 hover:bg-gray-700 transition shadow-lg">
           <h3 class="text-xl font-semibold mb-1">IMDB ETL with Python and MySQL</h3>
           <p class="text-gray-400 text-sm">Data automation with pandas, SQLAlchemy, and MySQL.</p>
         </a>
