--- a/projects/IMDB ETL/imdb_etl_portfolio.html
+++ b/projects/IMDB ETL/imdb_etl_portfolio.html
@@ -86,6 +86,11 @@ python imdb_etl_script.py</code></pre>
     <li>Logging, row hashing, genre parsing</li>
   </ul>
 
+  <h2>Source Code</h2>
+<p>
+  View the full ETL script on <a href="https://github.com/yourusername/my-portfolio/blob/main/projects/IMDB%20ETL/imdb_etl_script.py" target="_blank">GitHub</a>.
+</p>
+
   <h2>Author</h2>
   <p>Built by Scott Lyons to demonstrate real-world data engineering skills.</p>
 
