--- a/projects/IMDB ETL/imdb_etl_portfolio.html
+++ b/projects/IMDB ETL/imdb_etl_portfolio.html
@@ -1,99 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IMDb Incremental ETL Pipeline</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>IMDb Incremental ETL — Portfolio</title>
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #121212;
-      color: #f1f1f1;
-      line-height: 1.6;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
+    :root {
+      --bg:#0b0f14; --panel:#121821; --muted:#93a1b1; --text:#e6edf3; --accent:#60a5fa; --line:#1f2937;
     }
-    h1, h2, h3 {
-      color: #ffffff;
-      border-bottom: 1px solid #333;
-      padding-bottom: 0.3rem;
-    }
-    code, pre {
-      background-color: #1e1e1e;
-      padding: 0.3rem 0.6rem;
-      border-radius: 6px;
-      font-family: monospace;
-      overflow-x: auto;
-    }
-    pre {
-      padding: 1rem;
-    }
-    a {
-      color: #80cbc4;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    hr {
-      border: none;
-      border-top: 1px solid #333;
-      margin: 2rem 0;
-    }
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+    a{color:var(--accent);text-decoration:none}
+    a:hover{text-decoration:underline}
+    header{padding:48px 20px;border-bottom:1px solid var(--line);background:linear-gradient(180deg,#0b0f14, #0b0f14 60%, #0e141b)}
+    .wrap{max-width:1024px;margin:0 auto;padding:0 20px}
+    h1{font-size:2rem;margin:0 0 8px}
+    .sub{color:var(--muted);max-width:100ch}
+    .grid{display:grid;grid-template-columns:1fr;gap:20px;margin:24px 0}
+    @media(min-width:900px){.grid{grid-template-columns:1.2fr .8fr}}
+    .card{background:var(--panel);border:1px solid var(--line);border-radius:16px;padding:20px;box-shadow:0 10px 30px rgba(0,0,0,.2)}
+    h2{margin:0 0 12px;font-size:1.25rem}
+    ul{margin:0;padding-left:20px}
+    code,kbd,pre{font-family:ui-monospace,SFMono-Regular,Consolas,monospace}
+    pre{background:#0b1117;border:1px solid var(--line);border-radius:12px;padding:14px;overflow:auto}
+    .pill{display:inline-block;padding:4px 10px;border:1px solid var(--line);border-radius:999px;margin-right:8px;color:var(--muted)}
+    .row{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0 0}
+    .btn{display:inline-block;background:var(--accent);color:#08111f;padding:10px 14px;border-radius:12px;border:0;cursor:pointer;font-weight:600}
+    .btn:focus{outline:2px solid #fff2}
+    footer{border-top:1px solid var(--line);padding:28px 20px;color:var(--muted);text-align:center}
+    .small{font-size:.9rem;color:var(--muted)}
+    .list-compact li{margin:6px 0}
+    .kbd{border:1px solid var(--line);padding:2px 6px;border-radius:6px;background:#0b1117}
   </style>
 </head>
 <body>
-  <h1>IMDb Incremental ETL Pipeline</h1>
+  <header>
+    <div class="wrap">
+      <h1>IMDb Incremental ETL (xxhash64, low‑RAM, chunked)</h1>
+      <p class="sub">Portfolio project that ingests official IMDb TSVs, computes an xxhash64 per row, and performs hash‑guarded upserts into MySQL. Built for low‑memory environments using chunked staging with LOAD DATA LOCAL INFILE</p>
+      <div class="row" aria-label="tags">
+        <span class="pill">Python</span>
+        <span class="pill">SQLAlchemy</span>
+        <span class="pill">MySQL 8+</span>
+        <span class="pill">xxhash64</span>
+        <span class="pill">ETL</span>
+      </div>
+    </div>
+  </header>
 
-  <p>This project is a professional-grade <strong>incremental ETL pipeline</strong> for IMDb datasets. It demonstrates skills in data engineering, automation, and database design using Python and MySQL.</p>
+  <main class="wrap">
+    <div class="grid">
+      <section class="card">
+        <h2 id="features">Highlights</h2>
+        <ul class="list-compact">
+          <li>FIRST_RUN toggle: full build vs. incremental updates.</li>
+          <li>xxhash64 per-row digest stored as BINARY(8)(row_hash).</li>
+          <li>Hash‑guarded upserts using ON DUPLICATE KEY UPDATE.</li>
+          <li>Fast, low‑RAM ingestion via LOAD DATA LOCAL INFILE with chunking.</li>
+          <li>Index management on first run to accelerate bulk loads.</li>
+          <li>SQL‑only genre normalization with a recursive split.</li>
+          <li>Rotating ETL logs (file + console) with clear per‑stage progress.</li>
+        </ul>
+      </section>
 
-  <h2>Features</h2>
-  <ul>
-    <li>Incremental sync using row hashing</li>
-    <li>Genre normalization into relational tables</li>
-    <li>Indexing for query performance</li>
-    <li>Logging and backup system</li>
-  </ul>
+      <aside class="card">
+        <h2>Stack</h2>
+        <ul class="list-compact">
+          <li>Python 3.9+</li>
+          <li>pandas, SQLAlchemy, PyMySQL, xxhash, requests</li>
+          <li>MySQL 8+ with local_infile=1</li>
+        </ul>
+        <p class="small">Security note: enable LOCAL INFILE only in trusted environments.</p>
+      </aside>
+    </div>
 
-  <h2>Project Structure</h2>
-  <ul>
-    <li><code>new_download/</code>: Raw IMDb files</li>
-    <li><code>new_extract/</code>: Extracted TSVs</li>
-    <li><code>previously_uploaded/</code>: Reference snapshot</li>
-    <li><code>logs/imdb_sync_logs.txt</code>: Operation log</li>
-    <li><code>imdb_etl_script.py</code>: Core ETL script</li>
-  </ul>
+    <section class="card" id="quickstart">
+      <h2>Quickstart</h2>
+      <ol>
+        <li>Enable local_infile in MySQL ([mysqld] local_infile=1 and[client] local-infile=1).</li>
+        <li>Set paths and the DB URI in the script; start with FIRST_RUN = True.</li>
+        <li>Run python imdb_etl.py. On success, flip FIRST_RUN = False for incremental runs.</li>
+      </ol>
+      <pre><code># Install deps
+pip install pandas SQLAlchemy pymysql xxhash requests tqdm
 
-  <h2>Workflow</h2>
-  <ol>
-    <li>Download and extract IMDb data</li>
-    <li>Compare against previously uploaded data</li>
-    <li>Insert new/changed records using SQL</li>
-    <li>Normalize genres into a relational structure</li>
-    <li>Create indexes</li>
-    <li>Backup current dataset</li>
-  </ol>
+# Example DB URI
+mysql+pymysql://root:***@localhost:3306/imdb?local_infile=1&amp;charset=utf8mb4</code></pre>
+    </section>
 
-  <h2>How to Run</h2>
-  <pre><code>pip install pandas sqlalchemy tqdm pymysql
-python imdb_etl_script.py</code></pre>
+    <section class="card" id="setup">
+      <h2>Configuration</h2>
+      <pre><code>NEW_DOWNLOAD_DIR = Path(r"D:\LLMs\imdb\imdb_files\new_download")
+NEW_EXTRACT_DIR  = Path(r"D:\LLMs\imdb\imdb_files\new_extract")
+LOG_PATH         = Path(r"D:\LLMs\imdb\logs\imdb_sync_logs.txt")
 
-  <h2>Technologies</h2>
-  <ul>
-    <li>Python (pandas, SQLAlchemy, tqdm)</li>
-    <li>MySQL</li>
-    <li>Logging, row hashing, genre parsing</li>
-  </ul>
+DB_URI = "mysql+pymysql://root:***@localhost:3306/imdb?local_infile=1&amp;charset=utf8mb4"
+CHUNK_ROWS = int(os.getenv("CHUNK_ROWS", "150000"))
+FIRST_RUN = True</code></pre>
+      <p class="small">Tip: Tune <code>CHUNK_ROWS</code> to fit your RAM; smaller chunks reduce memory spikes.</p>
+    </section>
 
-  <h2>Source Code</h2>
-<p>
-  View the full ETL script on <a href="https://github.com/sllyons85/my-portfolio/blob/main/projects/IMDB%20ETL/imdb_etl_script.py" target="_blank">GitHub</a>.
-</p>
+    <section class="card">
+      <h2>How Incremental Upserts Work</h2>
+      <p>The pipeline loads each chunk into a temporary staging table, converts a hex hash to <code>BINARY(8)</code>, and only updates the target row if the incoming hash differs:</p>
+      <pre><code>INSERT INTO target (...)
+VALUES (...)
+ON DUPLICATE KEY UPDATE
+  col = IF(VALUES(row_hash) &lt;&gt; target.row_hash, VALUES(col), target.col),
+  row_hash = IF(VALUES(row_hash) &lt;&gt; target.row_hash, VALUES(row_hash), target.row_hash);</code></pre>
+    </section>
 
-  <h2>Author</h2>
-  <p>Built by Scott Lyons to demonstrate real-world data engineering skills.</p>
+    <section class="card">
+      <h2>Genre Normalization</h2>
+      <p>Splits title_basics.genres using a recursive CTE and populates genres and title_genres. Works with \N and blanks.</p>
+    </section>
 
-  <hr />
+    <section class="card">
+      <h2>Possible Enhancements</h2>
+      <ul class="list-compact">
+        <li>Metrics (rows/s) + Prometheus export.</li>
+        <li>Optional Dask parallel file ingestion.</li>
+        <li>CDC-style history tables (SCD Type 2).</li>
+        <li>Docker Compose for local MySQL + ETL.</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>Links</h2>
+      <ul>
+        <li><a href="https://github.com/sllyons85/my-portfolio/tree/main/projects/IMDB%20ETL" aria-disabled="true">View on GitHub</a></li>
+        <li><a href="https://github.com/sllyons85/my-portfolio/blob/main/projects/IMDB%20ETL/readme.md" download>Download README.md</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap">
+      <p class="small">© Scott Lyons — Portfolio Project. IMDb data © IMDb. Used under applicable terms.</p>
+    </div>
+  </footer>
 </body>
 </html>
